fix: conserta o css da tela de info pessoal

--- a/public/info.html
+++ b/public/info.html
@@ -70,20 +70,10 @@
                 <span id="erro-cidade" class="msg-erro">Informe a cidade</span>
             </div>
 
-            <div class="info-pessoal">
-                <label for="logradouro">Logradouro</label>
-                <input type="text" id="logradouro" placeholder="Logradouro" disabled>
-                <span id="erro-logradouro" class="msg-erro">Informe o logradouro</span>
-            </div>
-
-            <div class="info-pessoal">
-                <label for="complemento">Complemento</label>
-                <input type="text" id="complemento" placeholder="Complemento" disabled>
-                <span id="erro-complemento" class="msg-erro">Informe o complemento</span>
-            </div>
         </div>
 
-        <div class="coluna-dir">
+        <div class="coluna-meio">
+
             <div class="info-pessoal">
                 <label for="CNPJ">CNPJ</label>
                 <input type="text" id="cnpj" placeholder="CNPJ" maxlength="18" disabled>
@@ -111,7 +101,7 @@
                 </select>
                 <span id="erro-cargo" class="msg-erro">Selecione um cargo válido</span>
             </div>
-
+            
             <div class="info-pessoal">
                 <label for="UF">UF</label>
                 <select id="uf" disabled>
@@ -153,10 +143,26 @@
                 <span id="erro-bairro" class="msg-erro">Informe o bairro</span>
             </div>
 
+        </div>
+
+        <div class="coluna-dir">
+
+            <div class="info-pessoal">
+                <label for="logradouro">Logradouro</label>
+                <input type="text" id="logradouro" placeholder="Logradouro" disabled>
+                <span id="erro-logradouro" class="msg-erro">Informe o logradouro</span>
+            </div>
+
             <div class="info-pessoal">
                 <label for="numero">Número</label>
                 <input type="text" id="numero" placeholder="Número" disabled>
                 <span id="erro-numero" class="msg-erro">Informe o número</span>
+            </div>
+
+            <div class="info-pessoal">
+                <label for="complemento">Complemento</label>
+                <input type="text" id="complemento" placeholder="Complemento" disabled>
+                <span id="erro-complemento" class="msg-erro">Informe o complemento</span>
             </div>
 
             <div class="acoes-form">
