fix: corrige links da sidebar para navegacao incluindo tela slack

--- a/public/configuracoes.html
+++ b/public/configuracoes.html
@@ -73,12 +73,13 @@
     </div>
     
     <div class="sidebar">
-        <a href="info.html"><i class="fa-solid fa-user"></i></a>
-        <a href="dashboard.html"><i class="fa-solid fa-clock"></i></a>
-        <a href="http://localhost:4200"><i class="fa-solid fa-envelope"></i></a>
-        <a href="comparativos.html"><i class="fa-solid fa-file-lines"></i></a>
-        <a href="configuracoes.html" class="active"><i class="fa-solid fa-gear"></i></a>
-        <a href="#" onclick="logout()"><i class="fa-solid fa-right-from-bracket"></i></a>
+         <a href="#"><i class="fa-solid fa-user"onclick="window.location.href='../../info.html'"></i></a>
+        <a href="#"><i class="fa-solid fa-clock" onclick="window.location.href='../../dashboard.html'"></i></a>
+        <a href="#"><i class="fa-solid fa-envelope" onclick="window.location.href='../../mensagem.html'"></i></a>
+        <a href="#" ><i class="fa-solid fa-file-lines" onclick="window.location.href='../../configuracoes.html'"></i></a>
+        <a href="#" class="active"><i class="fa-solid fa-gear"></i></a>
+        <a href="#"><img src="./assets/imagem/logoslack.png" alt="" class="logoSlack" onclick="window.location.href='../../slack.html'"></a>
+        <a href="#"><i class="fa-solid fa-right-from-bracket" onclick="logout()"></i></a>
     </div>
 </body>
 
