--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -104,7 +104,7 @@
 <div class="main-content">
     <div class="charts-container">
         <div class="chart-wrapper" style="flex: 1; background-color: #001A27; border-radius: 8px; padding: 10px; display: flex; flex-direction: column; margin-bottom: 10px;">
-            <h4 class="chart-title">Passageiros por Voos Anualmente</h4>
+            <h4 class="chart-title">Quantidade de Passageiros por Voos Anualmente</h4>
             <div class="chart" style="position: relative; height: 100%; width: 100%;">
                 <canvas id="lineChart"></canvas>
             </div>
@@ -118,7 +118,7 @@
         </div>
     </div>
     <div class="table-section">
-        <h4 class="table-title">Ranking Destinos Nacionais</h4>
+        <h4 class="table-title">Ranking de Destinos Nacionais </h4>
         <br>
         <div class="table-container">
             <table>
