feature: adicionando parametros de FK_empresa no controller e model do alertas e relatorios

--- a/public/card.html
+++ b/public/card.html
@@ -67,9 +67,7 @@
         </a>
     
         <!-- Angular -->
-        <a href="http://localhost:4200">
-            <i class="fa-solid fa-envelope"></i>
-        </a>
+          <a id="link-angular" href="#"><i class="fa-solid fa-envelope"></i></a>
     
         <!-- Comparativos -->
         <a href="comparativos.html">
