--- a/public/configuracoes.html
+++ b/public/configuracoes.html
@@ -75,7 +75,7 @@
     <div class="sidebar">
         <a href="info.html"><i class="fa-solid fa-user"></i></a>
         <a href="dashboard.html"><i class="fa-solid fa-clock"></i></a>
-        <a href="http://localhost:4200"><i class="fa-solid fa-envelope"></i></a>
+     <a id="link-angular" href="#"><i class="fa-solid fa-envelope"></i></a>
         <a href="comparativos.html"><i class="fa-solid fa-file-lines"></i></a>
         <a href="configuracoes.html" class="active"><i class="fa-solid fa-gear"></i></a>
         <a href="#" onclick="logout()"><i class="fa-solid fa-right-from-bracket"></i></a>
