--- a/public/configuracoes.html
+++ b/public/configuracoes.html
@@ -80,6 +80,7 @@
         <a href="configuracoes.html" class="active"><i class="fa-solid fa-gear"></i></a>
         <a href="#" onclick="logout()"><i class="fa-solid fa-right-from-bracket"></i></a>
     </div>
+          <script src="./js/link.js"></script>
 </body>
 
 </html>
