fix: Corrigindo links usando caminho relativo

--- a/public/comparativos.html
+++ b/public/comparativos.html
@@ -256,15 +256,15 @@
             </div>
         </main>
 
-        <div class="sidebar">
-            <a href="#"><i class="fa-solid fa-user"onclick="window.location.href='../../info.html'"></i></a>
-            <a href="#"><i class="fa-solid fa-clock" onclick="window.location.href='../../dashboard.html'"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope" onclick="window.location.href='../../mensagem.html'"></i></a>
-            <a href="#" class="active"><i class="fa-solid fa-file-lines"></i></a>
-            <a href="#"><i class="fa-solid fa-gear" onclick="window.location.href='../../configuracoes.html'"></i></a>
-            <a href="#"><img src="./assets/imagem/logoslack.png" alt="" class="logoSlack" onclick="window.location.href='../../slack.html'"></a>
-            <a href="#"><i class="fa-solid fa-right-from-bracket" onclick="logout()"></i></a>
-    </div>
+         <div class="sidebar">
+            <a href="info.html"><i class="fa-solid fa-user"></i></a>
+            <a href="dashboard.html"><i class="fa-solid fa-clock"></i></a>
+            <a id="link-angular" href="#"><i class="fa-solid fa-envelope"></i></a>
+            <a href="comparativos.html" class="active"><i class="fa-solid fa-file-lines"></i></a>
+            <a href="configuracoes.html"><i class="fa-solid fa-gear"></i></a>
+                  <a href="slack.html"><img src="./assets/imagem/logoslack.png" alt="" class="logoSlack" ></a>
+            <a href="#" onclick="logout()"><i class="fa-solid fa-right-from-bracket"></i></a>
+        </div>
     </div>
     <script src="./js/link.js"></script>
 </body>
