--- a/public/slack.html
+++ b/public/slack.html
@@ -20,11 +20,11 @@
     </header>
     
   <div class="sidebar">
-        <a href="#"><i class="fa-solid fa-user"onclick="window.location.href='../../info.html'"></i></a>
-        <a href="#" ><i class="fa-solid fa-clock" onclick="window.location.href='../../dashboard.html'"></i></a>
-        <a href="#"><i class="fa-solid fa-envelope" onclick="window.location.href='../../mensagem.html'"></i></a>
-        <a href="#"><i class="fa-solid fa-file-lines" onclick="window.location.href='../../comparativos.html'"></i></a>
-        <a href="#"><i class="fa-solid fa-gear" onclick="window.location.href='../../configuracoes.html'"></i></a>
+       <a href="info.html"><i class="fa-solid fa-user"></i></a>
+        <a href="dashboard.html"><i class="fa-solid fa-clock"></i></a>
+          <a id="link-angular" href="#"><i class="fa-solid fa-envelope"></i></a>
+ <a href="comparativos.html"><i class="fa-solid fa-file-lines"></i></a>
+        <a href="configuracoes.html"><i class="fa-solid fa-gear"></i></a>
         <a href="#" class="active"><img src="./assets/imagem/logoslack.png" alt="" class="logoSlack" ></a>
         <a href="#"><i class="fa-solid fa-right-from-bracket" onclick="logout()"></i></a>
     </div>
@@ -93,6 +93,7 @@
   </div>
 
 </div>
+   <script src="./js/link.js"></script>
 </body>
 
 </html>
